--- a/css/main.css
+++ b/css/main.css
@@ -306,10 +306,10 @@ Officer Page
   overflow:auto;
 }
 
-.officercontent .panel
+/*.officercontent .panel
 {
-  height:1200px;
-}
+  height:650px;
+}*/
 
 .officercontent .right
 {
