Added update for WP Duathlon, updated race schedule and prac schedule, added update for nats [stillneedimages]

--- a/_includes/indexBottomPanel.html
+++ b/_includes/indexBottomPanel.html
@@ -4,6 +4,32 @@
 <div class ="row">
     <div class ="col-md-8">
       <h1>Recent Updates</h1>
+      <p><b>April 21-22, 2017</b></p>
+          <div class ="imgwrapper">
+            <img src ="img/RU_WPDu2017.jpg" style ="margin:0; width:100%;">
+            <div class='description'>
+            <!-- description content -->
+            <!-- end description content -->
+            </div>
+          </div>
+    </br>
+
+          <p>The Rutgers Triathlon Team raced hard and fast through the Alabama heat at the USAT Collegiate Club Nationals in Tuscaloosa, Alabama! We sent 13 of our finest triathletes to swim in the Black Warrior River, bike on the Jack Warner Parkway and run through the Tuscaloosa Riverwalk. The team placed 62nd Overall with our Women's Team in 70th place and our Men's team in 56th place!<a href ="https://www.teamusa.org/usa-triathlon/events/national-championships/2017/2017-collegiate-club-national-championships/results">Full results here!</a></p></br>
+
+
+      <p><b>April 1, 2017</b></p>
+          <div class ="imgwrapper">
+            <img src ="img/RU_WPDu2017.jpg" style ="margin:0; width:100%;">
+            <div class='description'>
+            <!-- description content -->
+            <!-- end description content -->
+            </div>
+          </div>
+    </br>
+
+          <p>The Rutgers Triathlon Team was well represented at the cold and wet West Point Duathlon! <a href ="img/RU_ResultsWPDu2017.png">Full results here!</a></p></br>
+
+
   <p><b>November 13, 2016</b></p>
       <div class ="imgwrapper">
         <img src ="img/RU_IndoorTri2016All.png" style ="margin:0; width:100%;">
