--- a/_includes/indoorContent.html
+++ b/_includes/indoorContent.html
@@ -12,6 +12,8 @@
 
 	</br>
 	</br>
+  <p>Stay tuned for an announcement on the 2017 Rutgers Indoor Triathlon !</p>
+<h2></h2>    
   <p class="quickinfo">
     <a href ="#results">Results!</a></br></br>
     <b>Date:</b> Sunday, November 2016</br>
