--- a/_includes/pracContent.html
+++ b/_includes/pracContent.html
@@ -12,8 +12,51 @@
 
 	</br>
 	</br>
+<p>Be sure to check the facebook group for smaller group practices that aren't regularly scheduled.</p>
+
+<h2>Fall 2017</h2></br>
+<p>Stay tuned for next semester's schedule!</p>
+  <h2>Spring 2017</h2></br>
+
+
+  <h3><b>Sunday</b></h3>
+  <p>
+    Organized on the Facebook group
+  </p>
+
+  <h3><b>Monday</b></h3>
+  <p>8:30 - 10:00PM - Swim at Cook Recreation Center</br>
+    <b>PC:</b> Casey
+  </p>
+
+  <h3><b>Tuesday</b></h3>
+  <p>6:00PM - Indoor Ride at Livingston Recreation Center</br>
+    <b>PC:</b> Dennis & Liz
+  </p>
+
+  <h3><b>Wednesday</b></h3>
+  <p>8:30 - 10:00PM - Swim at Cook Rec Center</br>
+    <b>PC:</b> Chelsie & Liz
+  </p>
+
+  <h3><b>Thursday</b></h3>
+  <p>12:00PM - Run at the track (Livi OR Werblin) </br>
+    <b>PC: </b>Colin
+  </p>
+  <p>9:00 - 10:00PM - Swim at Werblin</br>
+    <b>PC:</b> Liz & Dennis</b>
+  </p>
+
+  <h3><b>Friday</b></h3>
+  <p>12:00PM - Long Run out of Werblin</br>
+    <b>PC:</b> All Officers
+  </p>
+
+  <h3><b>Saturday</b></h3>
+  <p>Organized on FB</br>
+  </p>
+
   <h2>Fall 2016</h2></br>
-  <p>Be sure to check the facebook group for smaller group practices that aren't regularly scheduled.</p>
 
   <h3><b>Sunday</b></h3>
   <p>
