--- a/_includes/carouselDisplay.html
+++ b/_includes/carouselDisplay.html
@@ -22,7 +22,7 @@
                 <img src="img/cover4.jpg" alt="Fourth Slide">
             </div>
             <div class="item">
-                <img src="img/cover5.jpg" alt="Fifth Slide">
+                <img src="img/cover5.png" alt="Fifth Slide">
             </div>
         </div>
         <!-- Carousel controls -->
