--- a/_includes/raceContent.html
+++ b/_includes/raceContent.html
@@ -12,8 +12,21 @@
 
 	</br>
 	</br>
+  <h2>TENTATIVE Fall 2017</h2>
+  <h3><a href ="https://www.northeastctc.com/races">NECTC</a> Schedule</b></h3></br>
+  <p><b>West Point Sprint</b> - 08/20/17</p>
+  <p><b>Lake George Olympic</b> - 09/02/17</p>
+  <p><b>Buzzard's Bay Sprint</b> - 09/17/17</p>
+  <p><b>Westchester Olympic</b> - 09/24/17</p>
+  <p><b>MightMan Montauk (NECTC Championship)</b> - 10/01/17</p>
+</br>
+  <h2>Spring 2017</h2>
+  <h3><a href ="https://www.northeastctc.com/races">NECTC</a> Schedule</b></h3></br>
+  <p><b>West Point Duathlon</b> - 04/01/17</p>
+  <p><b>USAT Collegiate Club National Championships</b> - 04/22/17</p>
+  </br>
   <h2>Fall 2016</h2></br>
-  <h3><a href ="http://www.northeastctc.com/">NECTC</a> Schedule</b></h3></br>
+  <h3><a href ="https://www.northeastctc.com/races">NECTC</a> Schedule</b></h3></br>
   <p><b>Cranberry Sprint Trifest</b> - 08/20/16</p>
   <p><b>Rev3 Maine</b> - 08/28/16</p>
   <p><b>Lake George Triathlon Festival</b> - 09/03/16</p>
