--- a/_includes/indexBottomPanel.html
+++ b/_includes/indexBottomPanel.html
@@ -4,6 +4,19 @@
 <div class ="row">
     <div class ="col-md-8">
       <h1>Recent Updates</h1>
+
+       <p><b>September 6, 2017</b></p>
+          <!--<div class ="imgwrapper">
+            <img src ="img/RU_WPDu2017.jpg" style ="margin:0; width:100%;">
+            <div class='description'>
+            <!-- description content -->
+            <!-- end description content -->
+            <!--</div>
+          </div-->
+    </br>
+
+    <p>It's a new year and a new semester!</br></br> Welcome back to all our old triathletes and hello to all our new members! If you are thinking about joining the Rutgers Triathlon Team or just coming through because you're old and cool come to our general interest meeting this <b>Friday, September 8, 2017!!</b> We will meet in the College Ave Gym room number 202 <b>(CAG 202)</b> at 7:00 pm! Any and all questions about the club or triathlons will be answered. See you all there</a></p></br>
+
       <p><b>April 21-22, 2017</b></p>
           <div class ="imgwrapper">
             <!--<img src ="img/RU_WPDu2017.jpg" style ="margin:0; width:100%;">-->
