--- a/_includes/officersList.html
+++ b/_includes/officersList.html
@@ -36,7 +36,7 @@
 
     <div class ="col-md-6">
     <div class="panel panel-danger left">
-        <div class="panel-heading"><img class="media-object" src="img/ProfilePic.png"/><p></br><b>Dennis Harsley Jr.</b></br>Practice Captain / Race Coordinator</p></div>
+        <div class="panel-heading"><img class="media-object" src="img/dennisharsley.png"/><p></br><b>Dennis Harsley Jr.</b></br>Practice Captain / Race Coordinator</p></div>
     </div>
     </div>
     <div class ="col-md-6">
