added announcement for indoor tri 2017. added practice schedule. added links for indoor tri 2017

--- a/_includes/indexBottomPanel.html
+++ b/_includes/indexBottomPanel.html
@@ -5,6 +5,18 @@
     <div class ="col-md-8">
       <h1>Recent Updates</h1>
 
+      <p><b>September 15, 2017</b></p>
+          <div class ="imgwrapper">
+            <img src ="img/RUtriathlon2017_Flyer.png" style ="width:80%;">
+            <div class='description'>
+            <!-- description content -->
+            <!-- end description content -->
+            </div>
+          </div>
+    </br>
+
+    <p>The Rutgers Triathlon Team will again be proudly hosting the 2nd Rutgers Indoor Triathlon! We will race at the Werblin Recreation Center on October 22, 2017, starting at 8am. For more information about the race head <a href ="RU_indoortriathlon.html">here!</a> Once you decide to race in this great event, click <a href="http://getinvolved.tix.com/Event.aspx?EventCode=1009800">here to register!</a> The Rutgers Triathlon Team is excited to see you there! This event is open to athletes of all levels, expecially beginners.<b>Try-a-Tri!</b></p></br>
+
        <p><b>September 6, 2017</b></p>
           <!--<div class ="imgwrapper">
             <img src ="img/RU_WPDu2017.jpg" style ="margin:0; width:100%;">
@@ -15,7 +27,8 @@
           </div-->
     </br>
 
-    <p>It's a new year and a new semester!</br></br> Welcome back to all our old triathletes and hello to all our new members! If you are thinking about joining the Rutgers Triathlon Team or just coming through because you're old and cool come to our general interest meeting this <b>Friday, September 8, 2017!!</b> We will meet in the College Ave Gym room number 202 <b>(CAG 202)</b> at 7:00 pm! Any and all questions about the club or triathlons will be answered. See you all there</a></p></br>
+    <p>It's a new year and a new semester!</br></br> Welcome back to all our old triathletes and hello to all our new members! If you are thinking about joining the Rutgers Triathlon Team or just coming through because you're old and cool come to our general interest meeting this <b>Friday, September 8, 2017!!</b> We will meet in the College Ave Gym room number 202 <b>(CAG 202)</b> at 7:00 pm! Any and all questions about the club or triathlons will be answered. See you all there!</br></br>
+      Check out our new <a href="pracschedule.html">Fall 2017 Practice Schedule!</a></p></br>
 
       <p><b>April 21-22, 2017</b></p>
           <div class ="imgwrapper">
