--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -30,7 +30,7 @@
         <!-- <li id="newsNavBarItem"><a href="news.html">News</a></li> -->
         <!-- <li id="contactNavBarItem"><a href="/contact.html">Contact</a></li> -->
         <li id="aboutNavBarItem"><a href="about.html">About Us</a></li>
-        <li id="aboutNavBarItem"><a href="sponsors.html">Sponsors</a></li>
+        <li id="sponsorNavBarItem"><a href="sponsors.html">Sponsors</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   <!-- </div>/.navbar-fluid -->
