--- a/_includes/pracContent.html
+++ b/_includes/pracContent.html
@@ -15,7 +15,40 @@
 <p>Be sure to check the facebook group for smaller group practices that aren't regularly scheduled.</p>
 
 <h2>Fall 2017</h2></br>
-<p>Stay tuned for next semester's schedule!</p>
+
+<h3><b>Sunday</b></h3>
+  <p>
+    Organized on FB
+  </p>
+
+  <h3><b>Monday</b></h3>
+  <p>8:30 - 10:00PM - Swim at Cook Recreation Center</br>
+    <b>PC:</b> Liz
+  </p>
+
+  <h3><b>Tuesday</b></h3>
+  <p>6:30PM - Track Workout at University Park across from Werblin Recreation Center</br>
+    <b>PC:</b> Dennis
+  </p>
+
+  <h3><b>Wednesday</b></h3>
+  <p>8:30 - 10:00PM - Swim at Cook Rec Center</br>
+    <b>PC:</b> Liz
+  </p>
+
+  <h3><b>Thursday</b></h3>
+  <p>TBD - Bike/Spin (Bike rides for now)</br>
+    <b>PC:</b> Dennis
+
+  <h3><b>Friday</b></h3>
+  <p>4:00PM - Long Run out of Werblin</br>
+    <b>PC:</b> Dennis
+  </p>
+
+  <h3><b>Saturday</b></h3>
+  <p>Organized on FB</br>
+  </p>
+
   <h2>Spring 2017</h2></br>
 
 
