--- a/_includes/sponsorContent.html
+++ b/_includes/sponsorContent.html
@@ -1,4 +1,4 @@
-<div class="container-fluid top-buffer" id="joinContainer">
+<div class="container-fluid top-buffer" id="sponsorContainer">
 	<div class ="sponsorcontent">
 		<h1>Sponsors</h1>
 		<div class ="imgwrap">
