--- a/_layouts/sponsorLayout.html
+++ b/_layouts/sponsorLayout.html
@@ -28,6 +28,6 @@
   <script src="js/bootstrap.min.js"></script>
   <script src="js/dropdownonhover.js"></script>
   <script type="text/javascript">
-   updateNavbarToJoinPage();
+   updateNavbarToSponsorPage();
   </script>
 </html>
