--- a/_includes/indoorContent_2016.html
+++ b/_includes/indoorContent_2016.html
@@ -2,7 +2,7 @@
 <div class ="racecontent">
   <h1>Rutgers Indoor Triathlon</h1>
 	<div class ="imgwrap">
-		<a href="http://getinvolved.tix.com/Event.aspx?EventCode=1009800"> <img src ="img/RU_IndoorTriathlon2017.png"></a>
+		<img src ="img/RU_IndoorTriathlon.png">
 		<div class='description'>
 		<!-- description content -->
 			<!--<p class='description_content'>The Rutgers Indoor Triathlon</p>-->
@@ -10,67 +10,70 @@
 		</div>
 	</div>
 
+	</br>
+	</br>
+  <p>Stay tuned for an announcement on the 2017 Rutgers Indoor Triathlon !</p>
 <h2></h2>    
   <p class="quickinfo">
-    <b>Date:</b> Sunday October 22, 2017</br>
-    <b>Time:</b> 8:00 am - 2:00 pm</br>
+    <a href ="#results">Results!</a></br></br>
+    <b>Date:</b> Sunday, November 2016</br>
+    <b>Time:</b> 12pm - 1:30pm</br>
     <b>Location:</b> Werblin Recreation Center on Busch Campus</br>
     <b>$25</b> (Rutgers students, faculty & staff)</br>
     <b>$30</b> for all others (must be affiliated with a university)</br></br>
-    <a href="http://getinvolved.tix.com/Event.aspx?EventCode=1009800">REGISTER HERE!</a></br>
-    <a href="">Facebook Event</a>
+    <a href="http://getinvolved.tix.com/Event.aspx?EventCode=912142">REGISTER HERE!</a></br>
+    <a href="https://www.facebook.com/events/741333712698150/">Facebook Event</a>
   </p>
 </br>
-  <p>The Rutgers Triathlon team is proud to host the 2nd Rutgers Indoor Triathlon! </br></br>
+  <p>The Rutgers Triathlon team is proud to host the first Rutgers Indoor Triathlon! </br></br>
 
     "What's a Triathlon?"</br>
     A triathlon is a multiple sport endurance based event. They consist of a swimming, biking and running portion in which athletes will switch out their equipment in order to transition into the next leg of the race. Distances range from sprint distance (0.25-0.8mi swim, 9-13mi bike, 5k run) all the way to full ironman distance (2.4mi swim, 156mi bike, 26.2mi run).</br></br>
 
-    The triathlon will take place on Sunday, October 22, 2017 from 8:00 am - 2:00 pm at the Weblin Recreation Center on the Busch Campus in Piscataway, NJ. The race will be judged according to a distance trial format using separate waves. Participants will have a specific amount of time to complete as far a distance as possible for each leg of the race: 10 minutes for the swim in the Olympic Pool, 15 minutes for transition 1, 30 minutes for the bike on a stationary spinning bike, 5 minutes for transition 2 and 20 minutes for the run outdoors on the Scarlet Knights Sports Club Field. The Rutgers Indoor Triathlon is open to participants of all levels and abilities and we encourage all beginners to <b>Dare to Tri!</b></br></br>
+    The triathlon will take place on Sunday, November 13, 2016 from 12pm - 1:30pm at the Weblin Recreation Center on the Busch Campus in Piscataway, NJ. The race will be judged according to a distance trial format using separate waves. Participants will have a specific amount of time to complete as far a distance as possible for each leg of the race: 10 minutes for the swim in the Olympic Pool, 30 minutes for the bike on a stationary spinning bike and 20 minutes for the run outdoors on the Scarlet Knights Sports Club Field. The Rutgers Indoor Triathlon is open to participants of all levels and abilities and we encourage all beginners to <b>Dare to Tri!</b></br></br>
 
     Top finishers will receive prizes; while all finishers will be awarded with an official Rutgers Indoor Triathlon T-Shirt!</p>
   </br>
-  <p class ="quickinfo"><b>Schedule of Events (Tentative)</b></p>
-  <p><b>8:00 am - 8:30 am</b> - Packet Pick-up (Athletes will receive their race number, lane assignment and T-shirt)</br></p>
-    <p><b>Number of waves will depend on number of participants</b></p>
+  <p class ="quickinfo"><b>Schedule of Events</b></p>
+  <p><b>11:30 am - 12:00 pm</b> - Packet Pick-up (Athletes will receive their race number, lane assignment and T-shirt)</br></p>
     <div class ="col-md-3">
     <p><b>Wave 1</b></br>
-        8:45 am - Swim start</br>
-        8:55 am - Transition 1</br> 
-        9:10 am - Bike start</br>
-        9:40 am - Transition 2</br>
-        9:45 am - Run start</br>
+        12:15pm - Swim start</br>
+        12:25pm - Transition 1</br>
+        12:40pm - Bike start</br>
+        1:10pm - Transition 2</br>
+        1:15pm - Run start</br>
       </p>
     </div>
     <div class ="col-md-3">
     <p><b>Wave 2</b></br>
-        9:00 am - Swim start</br>
-        9:10 am - Transition 1</br>
-        9:25 am - Bike start</br>
-        9:55 am - Transition 2</br>
-        10:00 am - Run start</br>
+        12:40pm - Swim start</br>
+        12:50pm - Transition 1</br>
+        1:05pm - Bike start</br>
+        1:35pm - Transition 2</br>
+        1:40pm - Run start</br>
       </p>
     </div>
     <div class ="col-md-3">
       <p><b>Wave 3</b></br>
-        9:15 am - Swim start</br>
-        9:20 am - Transition 1</br>
-        9:40 am - Bike start</br>
-        10:10 am - Transition 2</br>
-        10:15 am - Run start</br>
+        1:05pm - Swim start</br>
+        1:15pm - Transition 1</br>
+        1:30pm - Bike start</br>
+        2:00pm - Transition 2</br>
+        2:05pm - Run start</br>
       </p>
     </div>
     <div class ="col-md-3">
     <p><b>Wave 4</b></br>
-        9:30 am - Swim start</br>
-        9:35 am - Transition 1</br>
-        9:55 am - Bike start</br>
-        10:25 am - Transition 2</br>
-        10:30 am - Run start</br>
+      1:30pm - Swim start</br>
+      1:40pm - Transition 1</br>
+      1:55pm - Bike start</br>
+      2:25pm - Transition 2</br>
+      2:30pm - Run start</br>
     </p>
   </div>
   </br>
-  <p><b>11:00 am - 12:00 pm</b> - Awards & Food</p>
+  <p><b>3:00 - 3:45pm</b> - Awards & Food</p>
   <ul>
     <li><p>Overall Men & Women<p></li>
     <li><p>Top Swimmer Men & Women<p></li>
@@ -134,7 +137,7 @@ Questions? Worried about raceday? Interested to volunteer?</br>
 <a href="mailto:rutgerstriteam@gmail.com">Email the Rutgers Triathlon team here.</a>
 </p>
 
-<p id="results" class="quickinfo"><b>Results 2016</b></p>
+<p id="results" class="quickinfo"><b>Results</b></p>
 
 <h3 style ="text-align:center;">Male</h2>
 <table style="width:100%">
