--- a/_includes/indoorContent.html
+++ b/_includes/indoorContent.html
@@ -10,8 +10,9 @@
 		</div>
 	</div>
 
-<h2></h2>    
+<h2></h2>
   <p class="quickinfo">
+    <a href="#results">Results!</a></br></br>
     <b>Date:</b> Sunday October 22, 2017</br>
     <b>Time:</b> 8:00 am - 2:00 pm</br>
     <b>Location:</b> Werblin Recreation Center on Busch Campus</br>
@@ -36,7 +37,7 @@
     <div class ="col-md-3">
     <p><b>Wave 1</b></br>
         8:45 am - Swim start</br>
-        8:55 am - Transition 1</br> 
+        8:55 am - Transition 1</br>
         9:10 am - Bike start</br>
         9:40 am - Transition 2</br>
         9:45 am - Run start</br>
@@ -134,7 +135,224 @@ Questions? Worried about raceday? Interested to volunteer?</br>
 <a href="mailto:rutgerstriteam@gmail.com">Email the Rutgers Triathlon team here.</a>
 </p>
 
-<p id="results" class="quickinfo"><b>Results 2016</b></p>
+<p id="results" class="quickinfo">
+  <b>Results 2017</b></p>
+
+  <h3 style ="text-align:center;">Female</h2>
+  <table style="width:100%">
+  <tr>
+    <th>Wave #</th>
+    <th>Athlete #</th>
+    <th>Last Name</th>
+    <th>First Name</th>
+    <th>Awards</th>
+    <th>Swim </br>Lengths</th>
+    <th>Bike Miles</th>
+    <th>Run Laps</th>
+    <th>Total Distance </br>(appx)</th>
+    <th>Total Weighted <br>Result</th>
+  </tr>
+  <tr>
+    <td>3</td>
+    <td>10</td>
+    <td>Jara</td>
+    <td>Katrina</td>
+    <td>#1 W. Overall / #1 W. Bike</td>
+    <td>27</td>
+    <td>13.7</td>
+    <td>5.5</td>
+    <td>16.6</td>
+    <td>18.5</td>
+  </tr>
+  <tr>
+    <td>3</td>
+    <td>9</td>
+    <td>Chu</td>
+    <td>Nikki</td>
+    <td></td>
+    <td>23</td>
+    <td>12.9</td>
+    <td>5.5</td>
+    <td>15.7</td>
+    <td>17.3</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>5</td>
+    <td>Gentry</td>
+    <td>Eliza</td>
+    <td>#1 W. Run</td>
+    <td>19</td>
+    <td>12.7</td>
+    <td>5.75</td>
+    <td>15.6</td>
+    <td>16.9</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>11</td>
+    <td>Cheng</td>
+    <td>Samantha</td>
+    <td>#1 W. Swim</td>
+    <td>28</td>
+    <td>12.5</td>
+    <td>3.5</td>
+    <td>14.5</td>
+    <td>16.5</td>
+  </tr>
+  <tr>
+    <td>1</td>
+    <td>1</td>
+    <td>Reimer</td>
+    <td>Kaiya</td>
+    <td></td>
+    <td>25</td>
+    <td>12.2</td>
+    <td>4.5</td>
+    <td>14.6</td>
+    <td>16.35</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>8</td>
+    <td>Yen</td>
+    <td>Li-Chen</td>
+    <td></td>
+    <td>21</td>
+    <td>12.4</td>
+    <td>4.75</td>
+    <td>14.8</td>
+    <td>16.33</td>
+  </tr>
+  <tr>
+    <td>2</td>
+    <td>4</td>
+    <td>Cheng</td>
+    <td>Emily</td>
+    <td></td>
+    <td>26</td>
+    <td>11.6</td>
+    <td>5.5</td>
+    <td>14.4</td>
+    <td>16.29</td>
+  </tr>
+  <tr>
+    <td>3</td>
+    <td>13</td>
+    <td>Malonza</td>
+    <td>Natasha</td>
+    <td></td>
+    <td>18</td>
+    <td>11.1</td>
+    <td>4</td>
+    <td>13.2</td>
+    <td>14.4</td>
+  </tr>
+  </table>
+
+  <h3 style ="text-align:center;">Male</h2>
+  <table style="width:100%">
+    <tr>
+      <th>Wave #</th>
+      <th>Athlete #</th>
+      <th>Last Name</th>
+      <th>First Name</th>
+      <th>Awards</th>
+      <th>Swim </br>Lengths</th>
+      <th>Bike Miles</th>
+      <th>Run Laps</th>
+      <th>Total Distance </br>(appx)</th>
+      <th>Total Weighted <br>Result</th>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td>3</td>
+      <td>Hong</td>
+      <td>Tyler</td>
+      <td>#1 M. Overall / #1 M. Bike</td>
+      <td>23</td>
+      <td>16</td>
+      <td>5.75</td>
+      <td>18.9</td>
+      <td>20.5</td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td>14</td>
+      <td>Boehme</td>
+      <td>Kyle</td>
+      <td>#1 M. Swim</td>
+      <td>28</td>
+      <td>14.7</td>
+      <td>5.75</td>
+      <td>17.7</td>
+      <td>19.67</td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td>12</td>
+      <td>Palumbo</td>
+      <td>Michael</td>
+      <td></td>
+      <td>23</td>
+      <td>15.3</td>
+      <td>5.25</td>
+      <td>18.0</td>
+      <td>19.62</td>
+    </tr>
+    <tr>
+      <td>1</td>
+      <td>0</td>
+      <td>Silvey</td>
+      <td>Brian</td>
+      <td></td>
+      <td>22</td>
+      <td>15</td>
+      <td>4</td>
+      <td>17.1</td>
+      <td>18.7</td>
+    </tr>
+    <tr>
+      <td>1</td>
+      <td>6</td>
+      <td>Valera</td>
+      <td>David</td>
+      <td></td>
+      <td>19</td>
+      <td>14.1</td>
+      <td>5.75</td>
+      <td>17.0</td>
+      <td>18.3</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td>7</td>
+      <td>Marciniak</td>
+      <td>Stephen</td>
+      <td>#1 M. Run</td>
+      <td>14</td>
+      <td>13.9</td>
+      <td>6.75</td>
+      <td>17.1</td>
+      <td>18.1</td>
+    </tr>
+    <tr>
+      <td>1</td>
+      <td>2</td>
+      <td>Conroy</td>
+      <td>Cody</td>
+      <td></td>
+      <td>22</td>
+      <td>13.1</td>
+      <td>4.5</td>
+      <td>15.4</td>
+      <td>17</td>
+    </tr>
+  </table>
+</br></br>
+
+  <p id ="results16" class="quickinfo">
+    <b>Results 2016</b></p>
 
 <h3 style ="text-align:center;">Male</h2>
 <table style="width:100%">
