--- a/_includes/indexBottomPanel.html
+++ b/_includes/indexBottomPanel.html
@@ -15,7 +15,7 @@
           </div>
     </br>
 
-    <p>Our athlete swam, biked and ran through the Werblin Recreation Center! We had a great group of triathletes, a few beginners and a few veterans. We hope everyone enjoyed their morning with the Rutgers Triathlon Team and hope to see you next year! Congratulations to all of our amazing athletes!</p></br>
+    <p>Our athletes swam, biked and ran through the Werblin Recreation Center! We had a great group of triathletes, a few beginners and a few veterans. We hope everyone enjoyed their morning with the Rutgers Triathlon Team and hope to see you next year! Congratulations to all of our amazing athletes!</p></br>
 
     <p>Check out the results <a href ="RU_indoortriathlon.html#results">here!</a></p>
 
