Added anouncement for meeting

--- a/_includes/indexBottomPanel.html
+++ b/_includes/indexBottomPanel.html
@@ -5,6 +5,17 @@
     <div class ="col-md-8">
       <h1>Recent Updates</h1>
 
+        <p><b>January 23, 2018</b></p>
+          <div class ="imgwrapper">
+            <img src ="img/RU_WestchesterTri17.png" style ="margin:0; width:100%;">
+            <div class='description'>
+            <!-- description content -->
+            <!-- end description content -->
+            </div>
+          </div>
+    </br>
+        <p>If you're interested in joining this great group of triathletes come to the General Interest Meeting! We'll me talking about upcoming events and races as well as the practice schedule for this Spring semester. The meeting will be at 7:00 PM - 8:00 PM on Friday, January 26, 2018 in Room 202 at the College Ave Gym. New and old members are welcome! <a href="https://www.facebook.com/events/366545360478399/">RSVP on FB!</a></p></br>
+
       <p><b>October 22, 2017</b></p>
           <div class ="imgwrapper">
             <img src ="img/RU_IndoorTri2017All.png" style ="margin:0; width:100%;">
