Updated news page, officers, inddortri, pracsched, racesched. added faqs page and edited navbar.

--- a/_includes/aboutContent.html
+++ b/_includes/aboutContent.html
@@ -26,6 +26,7 @@
 			<li><p><a href ="https://www.facebook.com/RutgersTriathlonTeam/">Facebook!</a></p></li>
 			<li><p><a href="https://www.instagram.com/rutgerstriathlon/">Instagram!</a></p></li>
 			<li><p><a href ="https://twitter.com/rutgerstriteam">Twitter!</a></p></li>
+      <li><p><a href ="https://www.strava.com/clubs/RutgersTriathlon">Strava!</a></p></li>
 	</p>
   </br>
 </div>
