--- a/_includes/carouselDisplay.html
+++ b/_includes/carouselDisplay.html
@@ -19,7 +19,7 @@
                 <img src="img/cover3.jpg" alt="Third Slide">
             </div>
             <div class="item">
-                <img src="img/cover4.jpg" alt="Fourth Slide">
+                <img src="img/cover4.png" alt="Fourth Slide">
             </div>
             <div class="item">
                 <img src="img/cover5.png" alt="Fifth Slide">
