--- a/_includes/indoorContent.html
+++ b/_includes/indoorContent.html
@@ -12,6 +12,7 @@
 
 <h2></h2>
   <p class="quickinfo">
+    <b> Stay tuned for an announcement for the 2018 Indoor Triathlon !</b></br>
     <a href="#results">Results!</a></br></br>
     <b>Date:</b> Sunday October 22, 2017</br>
     <b>Time:</b> 8:00 am - 2:00 pm</br>
