--- a/_includes/joinContent.html
+++ b/_includes/joinContent.html
@@ -26,9 +26,9 @@
 
 	<p>Once you're ready to jump in, just follow these few short steps:</p>
 	<ul>
-		<li><p>First join our <a href="https://www.facebook.com/groups/274413140871/">Facebook page</a>! Once you request to join, an officer will approve it shortly and you'll be added to the group. The facebook group is the main form of contact used for the team. This is where we make announcements, time changes to workouts, etc.</p></li>
+		<li><p>Join our <a href="https://www.facebook.com/groups/274413140871/">Facebook page</a>! Once you request to join, an officer will approve it shortly and you'll be added to the group. The facebook group is the main form of contact used for the team. This is where we make announcements, time changes to workouts, etc.</p></li>
 		<li><p>Pay dues! Dues are announced at the beginning of each semester at the first General Meeting. Cash or checks accepted. Please make checks out to Rutgers Triathlon Team</p></li>
-		<li><p>Fill out the <a href="http://itms.rutgers.edu/ssps/form_g_input.html">G-Form!</a> This is a form that needs to be filled out by every team member and has some basic information required by Rutgers University.</p></li>
+		<li><p>Register on the Rutgers Recreation <a href="http://recreation.rutgers.edu/sports/sport-clubs/registration/">Club Sports page</a> There is a form that needs to be filled out by every team member and has some basic information required by Rutgers University.</p></li>
 		<li><p>Finally, what you've been waiting for... Come to <a href="http://rutgerstriathlon.com/index.html">Practice!</a></h2></li>
 	</ul></br>
 	<p>Questions? Email us at : <a href="mailto:rutgerstriteam@gmail.com">  rutgerstriteam@gmail.com</a></p>
