--- a/_includes/pracContent.html
+++ b/_includes/pracContent.html
@@ -13,6 +13,44 @@
 	</br>
 	</br>
 <p>Be sure to check the facebook group for smaller group practices that aren't regularly scheduled.</p>
+<h2>Fall 2018</h2></br>
+<p> Coming soon!</p>
+
+<h2>Spring 2018</h2></br>
+
+<h3><b>Sunday</b></h3>
+  <p>
+    1:00 PM - Baby Brick </br>
+    <b>See <a href="https://www.facebook.com/groups/rutgerstriteam/">FB page</a></b>
+  </p>
+
+  <h3><b>Monday</b></h3>
+  <p>8:30 - 10:00PM - Swim at Cook Recreation Center</br>
+    <b>PC:</b> Drew
+  </p>
+
+  <h3><b>Tuesday</b></h3>
+  <p>9:00 11:00 PM - (bike) Trainer Tuesdays at Livingston Gym</br>
+    <b>PC:</b> Tyler
+  </p>
+
+  <h3><b>Wednesday</b></h3>
+  <p>8:30 - 10:00PM - Swim at Cook Recreation Center</br>
+    <b>PC:</b> Drew
+  </p>
+
+  <h3><b>Thursday</b></h3>
+  <p>5:30 PM - Track Run at University Park (Across from Werblin)</br>
+    <b>PC:</b> Stephen
+
+  <h3><b>Friday</b></h3>
+  <p>5:30 PM - Long Run out of University Park (Across from Werblin)</br>
+    <b>PC:</b> Stephen
+  </p>
+
+  <h3><b>Saturday</b></h3>
+  <p>Organized on FB</br>
+  </p>
 
 <h2>Fall 2017</h2></br>
 
