--- a/_includes/raceContent.html
+++ b/_includes/raceContent.html
@@ -12,20 +12,34 @@
 
 	</br>
 	</br>
-  <h2>TENTATIVE Fall 2017</h2>
+  <h2>Fall 2018</h2>
+  <h3><a href ="https://www.northeastctc.com/races">NECTC</a> Schedule</b></h3></br>
+  <p><b>West Point Sprint</b> - 08/25/18</p>
+  <p><b>Lake George Olympic</b> - 09/01/18</p>
+  <p><b>Lobsterman Olympic</b> - 09/08/18
+  <p><b>Buzzard's Bay Sprint</b> - 09/16/18</p>
+  <p><b>Westchester Olympic (NECTC Championship)</b> - 09/23/18</p>
+
+  <h2>Spring 2018</h2>
+  <h3><a href ="https://www.northeastctc.com/races">NECTC</a> Schedule</b></h3></br>
+  <p><b>West Point Duathlon</b> - 04/07/18</p>
+  <p><b>USAT Collegiate Club National Championships</b> - 04/27/18</p>
+  </br>
+
+  <h2>Fall 2017</h2>
   <h3><a href ="https://www.northeastctc.com/races">NECTC</a> Schedule</b></h3></br>
   <p><b>West Point Sprint</b> - 08/20/17</p>
   <p><b>Lake George Olympic</b> - 09/02/17</p>
   <p><b>Buzzard's Bay Sprint</b> - 09/17/17</p>
   <p><b>Westchester Olympic</b> - 09/24/17</p>
-  <p><b>MightMan Montauk (NECTC Championship)</b> - 10/01/17</p>
+  <p><b>MightyMan Montauk (NECTC Championship)</b> - 10/01/17</p>
 </br>
   <h2>Spring 2017</h2>
   <h3><a href ="https://www.northeastctc.com/races">NECTC</a> Schedule</b></h3></br>
   <p><b>West Point Duathlon</b> - 04/01/17</p>
   <p><b>USAT Collegiate Club National Championships</b> - 04/22/17</p>
   </br>
-  <h2>Fall 2016</h2></br>
+  <h2>Fall 2016</h2>
   <h3><a href ="https://www.northeastctc.com/races">NECTC</a> Schedule</b></h3></br>
   <p><b>Cranberry Sprint Trifest</b> - 08/20/16</p>
   <p><b>Rev3 Maine</b> - 08/28/16</p>
