--- a/_layouts/faqLayout.html
+++ b/_layouts/faqLayout.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     {% include navbar.html %}
-    {% include faqsContent.html %}
+    {% include faqscontent.html %}
   </body>
   {% include footer.html %}
 
