Added a swim resources page!

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse navbar-inverse" id="bs-example-navbar-collapse-1" style="border-radius:0px; background-image:none;">
       <ul class="nav navbar-nav navbar-inverse navbar-right" style ="background-image:none;">
         <!-- <li id="homeNavBarItem" class="active"><a href="/index.html">Home<span class="sr-only">(current)</span></a></li> -->
-        <li id="indoortriItem"><a href="RU_indoortriathlon.html">Indoor Triathlon</a>
+        <li id="indoortriNavBarItem"><a href="RU_indoortriathlon.html">Indoor Triathlon</a>
         <li id="joinNavBarItem"><a href="join.html">Join</a></li>
         <li id="officersNavBarItem"><a href="officers.html">Officers</a></li>
         <li id="aboutNavBarItem"><a href="about.html">About Us</a></li>
@@ -32,7 +32,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Resources<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li id="FAQsNavBarItem"><a href="faqs.html">Frequently Asked Questions</a></li>
-            <li id="pracschedNavBarItem"><a href="pracschedule.html">Swim Resources</a></li>
+            <li id="swimresoNavBarItem"><a href="swimreso.html">Swim Resources</a></li>
             <li id="raceschedNavBarItem"><a href="raceschedule.html">Bike Resources</a></li>
             <li id="resultsNavBarItem"><a href="results.html">Run Resources</a></li>
           </ul>
