--- a/_includes/resultsContent.html
+++ b/_includes/resultsContent.html
@@ -1,6 +1,6 @@
 <div class="container-fluid top-buffer" id="aboutContainer">
 <div class ="racecontent">
-  <h1>Race Schedule</h1>
+  <h1>Results</h1>
 	<div class ="imgwrap">
 		<img src ="img/RU_WestchesterTri17-2.png">
 		<div class='description'>
