fixed typo on swim resources page

--- a/_includes/swimContent.html
+++ b/_includes/swimContent.html
@@ -38,12 +38,12 @@
 </br>
   <h3><b>Additional Sources</b></h3>
   <ul>
-      <li><a href ="https://www.mytimetotri.com/training/swim/swim-specific-gear">Swim-Specific Gear from USAT's Time to Tri Iniiative</a></li>
-      <li><a href ="https://www.mytimetotri.com/training/swim/increase-your-open-water-comfort-level">Increase your Open Water Comfort Level</a></li>
-      <li><a href ="https://www.youtube.com/watch?v=YVLBTAaZsBE">Swimming for Triathlon</a></li>
-      <li><a href = "https://www.youtube.com/watch?v=-6r3M4GGgIY">How to Sight in Open Water</a></li>
-      <li><a href ="https://www.youtube.com/watch?v=5HLW2AI1Ink">Freestyle Swimming Technique</a></li>
-      <li><a href ="https://www.amazon.com/gp/product/1934030759/">Swim Works for Triathletes: Practical Workouts to Build Speed, Strength and Endurance (Workouts in a Binder)</a></li>
+      <li><p><a href ="https://www.mytimetotri.com/training/swim/swim-specific-gear">Swim-Specific Gear from USAT's Time to Tri Iniiative</a></p></li>
+      <li><p><a href ="https://www.mytimetotri.com/training/swim/increase-your-open-water-comfort-level">Increase your Open Water Comfort Level</a></p></li>
+      <li><p><a href ="https://www.youtube.com/watch?v=YVLBTAaZsBE">Swimming for Triathlon</a></p></li>
+      <li><p><a href = "https://www.youtube.com/watch?v=-6r3M4GGgIY">How to Sight in Open Water</a></p></li>
+      <li><p><a href ="https://www.youtube.com/watch?v=5HLW2AI1Ink">Freestyle Swimming Technique</a></p></li>
+      <li><p><a href ="https://www.amazon.com/gp/product/1934030759/">Swim Works for Triathletes: Practical Workouts to Build Speed, Strength and Endurance (Workouts in a Binder)</a></p></li>
   </ul>
 	</br>
 
