fixed another typo

--- a/_includes/swimContent.html
+++ b/_includes/swimContent.html
@@ -43,7 +43,7 @@
       <li><p><a href ="https://www.youtube.com/watch?v=YVLBTAaZsBE">Swimming for Triathlon</a></p></li>
       <li><p><a href = "https://www.youtube.com/watch?v=-6r3M4GGgIY">How to Sight in Open Water</a></p></li>
       <li><p><a href ="https://www.youtube.com/watch?v=5HLW2AI1Ink">Freestyle Swimming Technique</a></p></li>
-      <li><p><a href ="https://www.amazon.com/gp/product/1934030759/">Swim Works for Triathletes: Practical Workouts to Build Speed, Strength and Endurance (Workouts in a Binder)</a></p></li>
+      <li><p><a href ="https://www.amazon.com/gp/product/1934030759/">Swim Workouts for Triathletes: Practical Workouts to Build Speed, Strength and Endurance (Workouts in a Binder)</a></p></li>
   </ul>
 	</br>
 
