started adding stuff to bike resources page. added tyler's picture

--- a/_includes/indexBottomPanel.html
+++ b/_includes/indexBottomPanel.html
@@ -7,14 +7,14 @@
 
         <p><b>April 27, 2018</b></p>
         <div class ="imgwrapper">
-          <img src='img/RU_Nats2017A.png' style ="margin:0; width:100%;" onmouseover="this.src='img/RU_WPDu2018B.png';" onmouseout="this.src='img/RU_WPDu2018A.png';" />
+          <img src='img/RU_Nats2018A.png' style ="margin:0; width:100%;" onmouseover="this.src='img/RU_Nats2018B.png';" onmouseout="this.src='img/RU_Nats2018A.png';" />
           <div class='description'>
           <!-- description content -->
           <!-- end description content -->
           </div>
         </div>
         </br>
-          <p>Hot, crampy and swampy (despite no swim!) race at USAT Collegiate Club Nationals in Tuscaloosa, Alabama! Thank you Tuscaloosa for being a great host and letting us swarm your city! Our 8 Rutgers Triathletes had an amazing day conquering the duathlon course.</p></br>
+          <p>Hot, crampy and swampy (despite no swim!) race at USAT Collegiate Club Nationals in Tuscaloosa, Alabama! Thank you Tuscaloosa for being a great host and letting us swarm your city! Our 8 Rutgers Triathletes had an amazing day conquering the duathlon course. Our team placed 98th in the Combined Overall competition with our Men's team at 92nd and our Women's team at 86th. <a href ="https://www.teamusa.org/usa-triathlon/events/national-championships/2018/2018-collegiate-club-national-championships/results">Full results here!</a></p></br>
 
         <p><b>April 7, 2018</b></p>
         <div class ="imgwrapper">
