--- a/_includes/officersList.html
+++ b/_includes/officersList.html
@@ -40,7 +40,7 @@
 
     <div class ="col-md-4">
     <div class="panel panel-danger right">
-        <div class="panel-heading"><img class="media-object" src="img/ProfilePic.png"/><p></br><b>Tyler Hong</b></br>Practice Captain </br>Race Coordinator</p></div>
+        <div class="panel-heading"><img class="media-object" src="img/tylerhong.png"/><p></br><b>Tyler Hong</b></br>Practice Captain </br>Race Coordinator</p></div>
     </div>
     </div>
 
