--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -33,7 +33,7 @@
           <ul class="dropdown-menu">
             <li id="FAQsNavBarItem"><a href="faqs.html">Frequently Asked Questions</a></li>
             <li id="swimresoNavBarItem"><a href="swimreso.html">Swim Resources</a></li>
-            <li id="raceschedNavBarItem"><a href="raceschedule.html">Bike Resources</a></li>
+            <li id="bikeresoNavBarItem"><a href="bikereso.html">Bike Resources</a></li>
             <li id="resultsNavBarItem"><a href="results.html">Run Resources</a></li>
           </ul>
         </li>
