--- a/css/main.css
+++ b/css/main.css
@@ -271,6 +271,11 @@ Officer Page
   font-size:20px;
 }
 
+.officercontent .panel-body p
+{
+  font-size:14px;
+}
+
 .officercontent .imgwrap
 {
   position:relative;
