--- a/_includes/bikeContent.html
+++ b/_includes/bikeContent.html
@@ -23,7 +23,7 @@
     <li><p><b>Water bottles</b> - Helps you stay hydrated during the ride! Make sure your bike has bottle racks.</p></li>
     <li><p><b>Cellphone</b> - In the event you get lost, emergency, or bike flats/maintenance issues, give a good buddy a call.</p></li>
     <li><p><b>Spare Tubes</b> - If you get a flat ~15 mi from home, you'll need to change it. Flats happen, bring two</p></li>
-    <li><p><b>Pump or CO<sub>2<sub> with adapter</b> - Once you change the tube, you'll need to inflate it with these great tools</p></li>
+    <li><p><b>Pump or CO<sub>2</sub> with adapter</b> - Once you change the tube, you'll need to inflate it with these great tools</p></li>
     <li><p><b>Tire Levers</b> - Necessary tools for removing the tire while changing a flat. Two is recommended</p></li>
     <li><p><b>Multi-tool</b> - Convenient arrangement of allen keys, wrenches and a chain tool. If something feels loose during your ride, can be used to make an adjustment</p></li>
     <li><p><b>Cash/Credit Card/Wallet</b> - Great for the inevitable moments when you run out of snacks or hydration.</p></li>
