Finished bike resource page and added and completed run resource page

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -34,7 +34,7 @@
             <li id="FAQsNavBarItem"><a href="faqs.html">Frequently Asked Questions</a></li>
             <li id="swimresoNavBarItem"><a href="swimreso.html">Swim Resources</a></li>
             <li id="bikeresoNavBarItem"><a href="bikereso.html">Bike Resources</a></li>
-            <li id="resultsNavBarItem"><a href="results.html">Run Resources</a></li>
+            <li id="runNavBarItem"><a href="runreso.html">Run Resources</a></li>
           </ul>
         </li>
       </ul>
