--- a/_includes/swimContent.html
+++ b/_includes/swimContent.html
@@ -5,7 +5,7 @@
 		<img src ="img/swimreso.png">
 		<div class='description'>
 		<!-- description content -->
-			<p class='description_content'>Rutgers Triathlon Underwater!</p>
+			<p class='description_content'>Rutgers Triathlon Swimming at Werblin!</p>
 		<!-- end description content -->
 		</div>
 	</div>
@@ -46,7 +46,5 @@
       <li><p><a href ="https://www.amazon.com/gp/product/1934030759/">Swim Workouts for Triathletes (Workouts in a Binder)</a></p></li>
   </ul>
 	</br>
-
-  </br>
 </div>
 </div>
