--- a/_includes/indoorContent.html
+++ b/_includes/indoorContent.html
@@ -2,7 +2,7 @@
 <div class ="racecontent">
   <h1>Rutgers Indoor Triathlon</h1>
 	<div class ="imgwrap">
-		<a href="http://getinvolved.tix.com/Event.aspx?EventCode=1009800"> <img src ="img/RU_IndoorTriathlon2017.png"></a>
+		<a href="https://getinvolved.tix.com/Event.aspx?EventCode=1095876"> <img src ="img/RU_IndoorTriathlon2017.png"></a>
 		<div class='description'>
 		<!-- description content -->
 			<!--<p class='description_content'>The Rutgers Indoor Triathlon</p>-->
@@ -12,67 +12,68 @@
 
 <h2></h2>
   <p class="quickinfo">
-    <b> Stay tuned for an announcement for the 2018 Indoor Triathlon !</b></br>
+    <b> Information for 2018 Indoor Triathlon is here! </b></br>
     <a href="#results">Results!</a></br></br>
-    <b>Date:</b> Sunday October 22, 2017</br>
-    <b>Time:</b> 8:00 am - 2:00 pm</br>
+    <b>Details:</b> 10 minute swim in the pool, 30 minute bike in the spin room, 20 min run at University Park! </br></br>
+    <b>Date:</b> Saturday October 27, 2018</br>
+    <b>Time:</b> 11:30 am - 3:30 pm</br>
     <b>Location:</b> Werblin Recreation Center on Busch Campus</br>
     <b>$25</b> (Rutgers students, faculty & staff)</br>
     <b>$30</b> for all others (must be affiliated with a university)</br></br>
-    <a href="http://getinvolved.tix.com/Event.aspx?EventCode=1009800">REGISTER HERE!</a></br>
+    <a href="https://getinvolved.tix.com/Event.aspx?EventCode=1095876">REGISTER HERE!</a></br>
     <a href="">Facebook Event</a>
   </p>
 </br>
-  <p>The Rutgers Triathlon team is proud to host the 2nd Rutgers Indoor Triathlon! </br></br>
+  <p>The Rutgers Triathlon team is proud to host the 3rd Rutgers Indoor Triathlon! </br></br>
 
     "What's a Triathlon?"</br>
     A triathlon is a multiple sport endurance based event. They consist of a swimming, biking and running portion in which athletes will switch out their equipment in order to transition into the next leg of the race. Distances range from sprint distance (0.25-0.8mi swim, 9-13mi bike, 5k run) all the way to full ironman distance (2.4mi swim, 156mi bike, 26.2mi run).</br></br>
 
-    The triathlon will take place on Sunday, October 22, 2017 from 8:00 am - 2:00 pm at the Weblin Recreation Center on the Busch Campus in Piscataway, NJ. The race will be judged according to a distance trial format using separate waves. Participants will have a specific amount of time to complete as far a distance as possible for each leg of the race: 10 minutes for the swim in the Olympic Pool, 15 minutes for transition 1, 30 minutes for the bike on a stationary spinning bike, 5 minutes for transition 2 and 20 minutes for the run outdoors on the Scarlet Knights Sports Club Field. The Rutgers Indoor Triathlon is open to participants of all levels and abilities and we encourage all beginners to <b>Dare to Tri!</b></br></br>
+    The triathlon will take place on Sunday, October 27, 2018 from 11:30 am - 3:30 pm at the Weblin Recreation Center on the Busch Campus in Piscataway, NJ. The race will be judged according to a distance trial format using separate waves. Participants will have a specific amount of time to complete as far a distance as possible for each leg of the race: 10 minutes for the swim in the Olympic Pool, 15 minutes for transition 1, 30 minutes for the bike on a stationary spinning bike, 5 minutes for transition 2 and 20 minutes for the run outdoors on the Scarlet Knights Sports Club Field. The Rutgers Indoor Triathlon is open to participants of all levels and abilities and we encourage all beginners to <b>Dare to Tri!</b></br></br>
 
     Top finishers will receive prizes; while all finishers will be awarded with an official Rutgers Indoor Triathlon T-Shirt!</p>
   </br>
   <p class ="quickinfo"><b>Schedule of Events (Tentative)</b></p>
-  <p><b>8:00 am - 8:30 am</b> - Packet Pick-up (Athletes will receive their race number, lane assignment and T-shirt)</br></p>
+  <p><b>11:30 AM - 12:00 PM</b> - Packet Pick-up (Athletes will receive their race number, lane assignment and T-shirt)</br></p>
     <p><b>Number of waves will depend on number of participants</b></p>
     <div class ="col-md-3">
     <p><b>Wave 1</b></br>
-        8:45 am - Swim start</br>
-        8:55 am - Transition 1</br>
-        9:10 am - Bike start</br>
-        9:40 am - Transition 2</br>
-        9:45 am - Run start</br>
+        12:15 PM - Swim start</br>
+        12:25 PM - Transition 1</br>
+        12:40 PM - Bike start</br>
+        1:10 PM - Transition 2</br>
+        1:15 PM - Run start</br>
       </p>
     </div>
     <div class ="col-md-3">
     <p><b>Wave 2</b></br>
-        9:00 am - Swim start</br>
-        9:10 am - Transition 1</br>
-        9:25 am - Bike start</br>
-        9:55 am - Transition 2</br>
-        10:00 am - Run start</br>
+        12:30 PM - Swim start</br>
+        12:40 PM - Transition 1</br>
+        12:55 PM - Bike start</br>
+        1:25 PM - Transition 2</br>
+        1:30 PM - Run start</br>
       </p>
     </div>
     <div class ="col-md-3">
       <p><b>Wave 3</b></br>
-        9:15 am - Swim start</br>
-        9:20 am - Transition 1</br>
-        9:40 am - Bike start</br>
-        10:10 am - Transition 2</br>
-        10:15 am - Run start</br>
+        12:45 PM - Swim start</br>
+        12:55 PM - Transition 1</br>
+        1:10 PM - Bike start</br>
+        1:40 PM - Transition 2</br>
+        1:45 PM - Run start</br>
       </p>
     </div>
     <div class ="col-md-3">
     <p><b>Wave 4</b></br>
-        9:30 am - Swim start</br>
-        9:35 am - Transition 1</br>
-        9:55 am - Bike start</br>
-        10:25 am - Transition 2</br>
-        10:30 am - Run start</br>
+        1:00 PM - Swim start</br>
+        1:10 PM - Transition 1</br>
+        1:25 PM - Bike start</br>
+        1:55 PM - Transition 2</br>
+        2:00 PM - Run start</br>
     </p>
   </div>
   </br>
-  <p><b>11:00 am - 12:00 pm</b> - Awards & Food</p>
+  <p><b>2:30 PM - 3:30 PM</b> - Awards & Food</p>
   <ul>
     <li><p>Overall Men & Women<p></li>
     <li><p>Top Swimmer Men & Women<p></li>
