--- a/_includes/indoorContent.html
+++ b/_includes/indoorContent.html
@@ -1,8 +1,12 @@
 <div class="container-fluid top-buffer" id="aboutContainer">
 <div class ="racecontent">
-  <h1>Rutgers Indoor Triathlon</h1>
+  <div class = "banner-top">
+    <h1>Rutgers Indoor Triathlon</h1>
+  </div>
 	<div class ="imgwrap">
-		<a href="https://getinvolved.tix.com/Event.aspx?EventCode=1095876"> <img src ="img/RU_IndoorTriathlon2017.png"></a>
+      <div class = "banner-middle">
+		    <a href="https://getinvolved.tix.com/Event.aspx?EventCode=1095876"> <img src ="img/RU_IndoorTriathlon2017.png"></a>
+      </div>
 		<div class='description'>
 		<!-- description content -->
 			<!--<p class='description_content'>The Rutgers Indoor Triathlon</p>-->
@@ -11,18 +15,20 @@
 	</div>
 
 <h2></h2>
-  <p class="quickinfo">
-    <b> Information for 2018 Indoor Triathlon is here! </b></br>
-    <a href="#results">Results!</a></br></br>
-    <b>Details:</b> 10 minute swim in the pool, 30 minute bike in the spin room, 20 min run at University Park! </br></br>
-    <b>Date:</b> Saturday October 27, 2018</br>
-    <b>Time:</b> 11:30 am - 3:30 pm</br>
-    <b>Location:</b> Werblin Recreation Center on Busch Campus</br>
-    <b>$25</b> (Rutgers students, faculty & staff)</br>
-    <b>$30</b> for all others (must be affiliated with a university)</br></br>
-    <a href="https://getinvolved.tix.com/Event.aspx?EventCode=1095876">REGISTER HERE!</a></br>
-    <a href="">Facebook Event</a>
-  </p>
+ <div class = "indoorInfo1">
+   <p class="quickinfo">
+     <b> Information for 2018 Indoor Triathlon is here! </b></br>
+     <a href="#results">Results!</a></br></br>
+     <b>Details:</b> 10 minute swim in the pool, 30 minute bike in the spin room, 20 min run at University Park! </br></br>
+     <b>Date:</b> Saturday October 27, 2018</br>
+     <b>Time:</b> 11:30 am - 3:30 pm</br>
+     <b>Location:</b> Werblin Recreation Center on Busch Campus</br>
+     <b>$25</b> (Rutgers students, faculty & staff)</br>
+     <b>$30</b> for all others (must be affiliated with a university)</br></br>
+     <a href="https://getinvolved.tix.com/Event.aspx?EventCode=1095876">REGISTER HERE!</a></br>
+     <a href="">Facebook Event</a>
+   </p>
+ </div>
 </br>
   <p>The Rutgers Triathlon team is proud to host the 3rd Rutgers Indoor Triathlon! </br></br>
 
