--- a/_layouts/indoorLayout.html
+++ b/_layouts/indoorLayout.html
@@ -31,4 +31,24 @@
   <script type="text/javascript">
    updateNavbarToIndoorPage();
   </script>
+
+  <script>
+    window.sr = ScrollReveal();
+    sr.reveal('.banner-middle', {
+      duration: 2000,
+      origin: 'right',
+      distance: '500px'
+    });
+    sr.reveal('.banner-top', {
+      delay: 200,
+      duration: 2000,
+      origin: 'left',
+      distance: '600px'
+    });
+    sr.reveal('.indoorInfo1', {
+      duration: 2000,
+      origin: 'left',
+      distance: '600px'
+    });
+  </script>
 </html>
