--- a/_includes/carouselDisplay.html
+++ b/_includes/carouselDisplay.html
@@ -10,7 +10,7 @@
         <!-- Wrapper for carousel items -->
         <div class="carousel-inner">
             <div class="item active">
-                <img src="img/cover2.jpg" alt="First Slide">
+                <img src="img/rutAngLobster2K18.jpg" alt="First Slide">
             </div>
             <div class="item">
                 <img src="img/cover.jpg" alt="Second Slide">
