--- a/_includes/indexBottomPanel.html
+++ b/_includes/indexBottomPanel.html
@@ -5,6 +5,20 @@
     <div class ="col-md-8">
       <h1>Recent Updates</h1>
 
+        <p><b> September 8, 2018 </b></p>
+        <div class = "imgwrapper">
+          <img src= "img/ruttLobster2k18.jpg" style ="margin:0; width:100%;" onmouseover="this.src='img/ruttLobster2k18CasFin.jpg';" onmouseout="this.src='img/ruttLobster2k18.jpg';" />
+        </div>
+      </br>
+      <p> A new semester has arrived, and we're just racin' in crustacean nation! We had an awesome time
+          at the Lobsterman Triathlon this year! It was a very long
+          drive, but it was worth it. Outstanding racing conditions,
+          and Cody was even able to fly his drone around for a little
+          bit! Check out the <a href = "https://www.youtube.com/watch?v=fhH0zDORoQ4">
+          YouTube Video </a> on our channel!
+        </br>
+        </br>
+
         <p><b>April 27, 2018</b></p>
         <div class ="imgwrapper">
           <img src='img/RU_Nats2018A.png' style ="margin:0; width:100%;" onmouseover="this.src='img/RU_Nats2018B.png';" onmouseout="this.src='img/RU_Nats2018A.png';" />
@@ -52,77 +66,6 @@
 
     <p>Check out the results <a href ="RU_indoortriathlon.html#results">here!</a></p>
 
-      <p><b>September 15, 2017</b></p>
-          <div class ="imgwrapper">
-            <img src ="img/RUtriathlon2017_Flyer.png" style ="width:80%;">
-            <div class='description'>
-            <!-- description content -->
-            <!-- end description content -->
-            </div>
-          </div>
-    </br>
-
-    <p>The Rutgers Triathlon Team will again be proudly hosting the 2nd Rutgers Indoor Triathlon! We will race at the Werblin Recreation Center on October 22, 2017, starting at 8am. For more information about the race head <a href ="RU_indoortriathlon.html">here!</a> Once you decide to race in this great event, click <a href="http://getinvolved.tix.com/Event.aspx?EventCode=1009800">here to register!</a> The Rutgers Triathlon Team is excited to see you there! This event is open to athletes of all levels, expecially beginners.<b>Try-a-Tri!</b></p></br>
-
-       <p><b>September 6, 2017</b></p>
-    </br>
-
-    <p>It's a new year and a new semester!</br></br> Welcome back to all our old triathletes and hello to all our new members! If you are thinking about joining the Rutgers Triathlon Team or just coming through because you're old and cool come to our general interest meeting this <b>Friday, September 8, 2017!!</b> We will meet in the College Ave Gym room number 202 <b>(CAG 202)</b> at 7:00 pm! Any and all questions about the club or triathlons will be answered. See you all there!</br></br>
-      Check out our new <a href="pracschedule.html">Fall 2017 Practice Schedule!</a></p></br>
-
-      <p><b>April 21-22, 2017</b></p>
-          <div class ="imgwrapper">
-            <!--<img src ="img/RU_WPDu2017.jpg" style ="margin:0; width:100%;">-->
-            <img src='img/RU_Nats2017A.png' style ="margin:0; width:100%;" onmouseover="this.src='img/RU_Nats2017B.png';" onmouseout="this.src='img/RU_Nats2017A.png';" />
-            <div class='description'>
-            <!-- description content -->
-            <!-- end description content -->
-            </div>
-          </div>
-    </br>
-
-          <p>The Rutgers Triathlon Team raced hard and fast through the Alabama heat at the USAT Collegiate Club Nationals in Tuscaloosa, Alabama! We sent 13 of our finest triathletes to swim in the Black Warrior River, bike on the Jack Warner Parkway and run through the Tuscaloosa Riverwalk. The team placed 62nd Overall with our Women's Team in 70th place and our Men's team in 56th place! <a href ="https://www.teamusa.org/usa-triathlon/events/national-championships/2017/2017-collegiate-club-national-championships/results">Full results here!</a></p></br>
-
-
-      <p><b>April 1, 2017</b></p>
-          <div class ="imgwrapper">
-            <img src ="img/RU_WPDu2017.jpg" style ="margin:0; width:100%;">
-            <div class='description'>
-            <!-- description content -->
-            <!-- end description content -->
-            </div>
-          </div>
-    </br>
-
-          <p>The Rutgers Triathlon Team was well represented at the cold and wet West Point Duathlon! <a href ="img/RU_ResultsWPDu2017.png">Full results here!</a></p></br>
-
-
-  <p><b>November 13, 2016</b></p>
-      <div class ="imgwrapper">
-        <img src ="img/RU_IndoorTri2016All.png" style ="margin:0; width:100%;">
-        <div class='description'>
-        <!-- description content -->
-        <!-- end description content -->
-        </div>
-      </div>
-</br>
-
-      <p>This weekend the Rutgers Triathlon team hosted the first Rutgers Indoor Triathlon at the Werblin Recreation Center! We had 17 athletes come out, some doing their first race and others seasoned triathletes! We had a great time hosting and volunteering, and hope everyone enjoyed the event. Congratulations to all athletes who participated in the event! We hope to see you next year! </br></br>
-      Check out the <a href ="RU_indoortriathlon.html#results16">results</a> here!</p></br>
-
-      <p><b>November 4, 2016</b></p>
-      <div class ="imgwrapper">
-    		<img src ="img/RU_IndoorTriFlyer.jpg" width="80%">
-    		<div class='description'>
-    		<!-- description content -->
-    		<!-- end description content -->
-    		</div>
-    	</div>
-</br>
-      <p>The Rutgers Triathlon Team is proud to announce that we are hosting the first Rutgers Indoor Triathlon! The event will take place on November 13, 2016 at the Werblin Recreation Center starting at 12pm. For more information and details click <a href ="RU_indoortriathlon.html">here!!</a> If you're all set to go click <a href ="http://getinvolved.tix.com/Event.aspx?EventCode=912142">here to register!!</a> Hope to see you there!! Registration is open to racers of all levels, especially beginners. <b>Dare to Tri!</b></p></br>
-
-      <p><b>November 3, 2016</b></p>
-      <p>Welcome to the new and shiny update section of the Rutgers Triathlon Team! Here we'll be posting updates about our races and general announcements. This will soon be filled out with some news about this past fall 2016 season.</p>
     </div>
     <div class =col-md-4>
       <iframe height='454' width=100% frameborder='0' allowtransparency='true' scrolling='no' src='https://www.strava.com/clubs/RutgersTriathlon/latest-rides/7e71c1ac0f76b046c3f81fa3ff24e5cac143cdae?show_rides=true'>
@@ -130,7 +73,6 @@
     </br></br>
       <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FRutgersTriathlonTeam%2F&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width=100% height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
     </br></br>
-      <a class="twitter-timeline" data-height="400" data-theme="light" data-link-color="#cc0033" href="https://twitter.com/RutgersTriTeam">Tweets by RutgersTriTeam</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
   </div>
 </div>
