--- a/_includes/indoorContent.html
+++ b/_includes/indoorContent.html
@@ -5,7 +5,8 @@
   </div>
 	<div class ="imgwrap">
       <div class = "banner-middle">
-		    <a href="https://getinvolved.tix.com/Event.aspx?EventCode=1095876"> <img src ="img/RU_IndoorTriathlon2017.png"></a>
+        <!-- NOTE that Indoor Tri sign uses Dock 51 font -->
+		    <a href="https://getinvolved.tix.com/Event.aspx?EventCode=1095876"> <img src ="img/RU_IndoorTriathlon.png"></a>
       </div>
 		<div class='description'>
 		<!-- description content -->
@@ -26,10 +27,11 @@
      <b>$25</b> (Rutgers students, faculty & staff)</br>
      <b>$30</b> for all others (must be affiliated with a university)</br></br>
      <a href="https://getinvolved.tix.com/Event.aspx?EventCode=1095876">REGISTER HERE!</a></br>
-     <a href="">Facebook Event</a>
+     <a href= "https://www.facebook.com/events/275555353297980/">Facebook Event</a>
    </p>
  </div>
 </br>
+<div class = "pop-in">
   <p>The Rutgers Triathlon team is proud to host the 3rd Rutgers Indoor Triathlon! </br></br>
 
     "What's a Triathlon?"</br>
@@ -42,7 +44,7 @@
   <p class ="quickinfo"><b>Schedule of Events (Tentative)</b></p>
   <p><b>11:30 AM - 12:00 PM</b> - Packet Pick-up (Athletes will receive their race number, lane assignment and T-shirt)</br></p>
     <p><b>Number of waves will depend on number of participants</b></p>
-    <div class ="col-md-3">
+    <div class ="col-md-6">
     <p><b>Wave 1</b></br>
         12:15 PM - Swim start</br>
         12:25 PM - Transition 1</br>
@@ -51,7 +53,7 @@
         1:15 PM - Run start</br>
       </p>
     </div>
-    <div class ="col-md-3">
+    <div class ="col-md-6">
     <p><b>Wave 2</b></br>
         12:30 PM - Swim start</br>
         12:40 PM - Transition 1</br>
@@ -59,8 +61,8 @@
         1:25 PM - Transition 2</br>
         1:30 PM - Run start</br>
       </p>
-    </div>
-    <div class ="col-md-3">
+    </div> </br></br>
+    <div class ="col-md-6">
       <p><b>Wave 3</b></br>
         12:45 PM - Swim start</br>
         12:55 PM - Transition 1</br>
@@ -69,14 +71,14 @@
         1:45 PM - Run start</br>
       </p>
     </div>
-    <div class ="col-md-3">
+    <div class ="col-md-6">
     <p><b>Wave 4</b></br>
         1:00 PM - Swim start</br>
         1:10 PM - Transition 1</br>
         1:25 PM - Bike start</br>
         1:55 PM - Transition 2</br>
         2:00 PM - Run start</br>
-    </p>
+    </p> </br></br>
   </div>
   </br>
   <p><b>2:30 PM - 3:30 PM</b> - Awards & Food</p>
@@ -87,6 +89,8 @@
     <li><p>Top Runner Men & Women<p></li>
   </ul>
 </br>
+</div>
+<div class = "come-in">
   <p class="quickinfo"><b>Rules</b></p>
   <p><b>Swim</b></p>
     <ul>
@@ -142,7 +146,8 @@ Phone: (848) 932-0701</br>
 Questions? Worried about raceday? Interested to volunteer?</br>
 <a href="mailto:rutgerstriteam@gmail.com">Email the Rutgers Triathlon team here.</a>
 </p>
-
+</div>
+<div class = "rotate2017">
 <p id="results" class="quickinfo">
   <b>Results 2017</b></p>
 
@@ -358,7 +363,8 @@ Questions? Worried about raceday? Interested to volunteer?</br>
     </tr>
   </table>
 </br></br>
-
+</div>
+<div class = "rotate2016">
   <p id ="results16" class="quickinfo">
     <b>Results 2016</b></p>
 
@@ -598,6 +604,7 @@ Questions? Worried about raceday? Interested to volunteer?</br>
     </tr>
 
   </table>
+</div>
 </br>
   <p>Total Weighted Results = 20 x swim mileage + 0.5 x bike mileage + 3 x run mileage</p></br>
   <p>Pictures will be posted in an image gallery soon. Until then, they are available on google drive for viewing and download : <a href ="https://drive.google.com/drive/folders/0B0pgFKXtEdkLRzFPRGx5cnp1QXc?usp=sharing">Google Drive</a></p>
